fix cardview coloring in media and horizontal spacing in publications page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,7 @@ html, body {
   height: auto;
   min-height: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 img {
