--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -12,9 +12,20 @@
 .year {
     border-top: 1px solid $dark-gray;
     color: $dark-gray;
-    margin: 0 -3em -2.5ex -2em;
+    margin: 0 0 0.25em 0;
     padding-top: 1ex;
-    text-align: right;
+    text-align: left;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+@media screen and (min-width: $on-palm) {
+    .year {
+        margin: 0 -3em -2.5ex -2em;
+        text-align: right;
+        font-size: 1em;
+        font-weight: normal;
+    }
 }
 .bibliography {
     margin-bottom: 50px;
@@ -60,6 +71,8 @@
                 font-size: 1em;
                 line-height: 1.4em;
                 padding: 10px;
+                overflow-x: auto;
+                max-width: 100%;
             }
         }
         .hidden.open {
@@ -78,8 +91,15 @@
         }
     }
     abbr {
-        position: absolute;
+        display: none;
+    }
+
+    @media screen and (min-width: $on-palm) {
+        abbr {
+            display: block;
+            position: absolute;
             left: -7em;
+        }
     }
  }
 .star {
